fixed config base url

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 name: Uberon
 markdown: redcarpet
 pygments: true
-baseurl: /anatomy
-imgurl: /anatomy/images
+baseurl: 
+imgurl: /images
 speciesAOs: [xao, zfa]
 
 distributions:
