--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ speciesAOs: [xao, zfa]
 distributions:
     taxon_subsets: [euarchontoglires, aves, amniote]
     system_subsets: [appendicular-minimal, circulatory-minimal, life-stages-composite, life-stages-minimal, sensory-minimal, nervous-minimal, immune-minimal, excretory-minimal, pulmonary-minimal]
-    mapped_ontologies: [ehdaa2, fma, xao, zfa, fbbt, ma, vsao, tao, emapa , sctid, bto, nifstd, fbbt, wbbt, aba, ncithesaurus, bila, caro]
+    mapped_ontologies: [ehdaa2, fma, xao, zfa, fbbt, ma, vsao, tao, emapa , sctid, bto, nifstd, fbbt, wbbt, mba, dmba, hba, dhba, pba, ncithesaurus, bila, caro]
 
 project:
     name: Uberon
